yaml-cpp (0.6.3-1) UNRELEASED; urgency=medium

  * New upstream release.
  * Migrate to using the debhelper-compat dependency.
  * Bump Standards-version to 4.5.0, no changes needed.

 -- Simon Quigley <tsimonq2@debian.org>  Wed, 29 Apr 2020 03:37:01 -0500

yaml-cpp (0.6.2-4) unstable; urgency=medium

  * Upload to Sid.

 -- Simon Quigley <tsimonq2@debian.org>  Mon, 07 Jan 2019 16:00:33 -0600

yaml-cpp (0.6.2-3) experimental; urgency=medium

  * Update symbols from build logs.

 -- Simon Quigley <tsimonq2@debian.org>  Sat, 05 Jan 2019 17:27:47 -0600

yaml-cpp (0.6.2-2) experimental; urgency=medium

  [ Christopher James Halse Rogers ]
  * d/libyaml-cpp0.6.symbols:
    - Add symbols file now that only public symbols are exported
  * d/libyaml-cpp-dev.install:
    - Don't install gtest/gmock headers (Closes: #915575)

  [ Simon Quigley ]
  * Change my email to tsimonq2@debian.org now that I am a Debian Developer.
  * Bump Standards-version to 4.3.0, no changes needed.

 -- Simon Quigley <tsimonq2@debian.org>  Sun, 23 Dec 2018 22:25:40 -0600

yaml-cpp (0.6.2-1) experimental; urgency=medium

  [ Andreas Tille ]
  * New upstream version
  * debhelper 11
  * Standards-Version: 4.2.0
  * Point Vcs-fields to Salsa
  * Fix watch file

  [ Graham Inggs ]
  * Drop patches no longer needed
  * Drop dependencies on libboost-dev, no longer needed
  * Rename binary package for libyaml-cpp0.6 transition

  [ Ondřej Nový ]
  * d/copyright: Use https protocol in Format field
  * d/changelog: Remove trailing whitespaces

  [ Christopher James Halse Rogers ]
  * patches/symbol-visibility.patch: Hide non-public-API symbols.
    - Cuts down the number of exported symbols by over half, and makes
      it more feasible to use a .symbols file
  * d/rules: Use VERBOSE make.
    - Lets the hardening buildlog scanning check that the appropriate
      flags have been passed, and makes it easier to debug build
      failures.

  [ Simon Quigley ]