@@ -5,7 +5,7 @@ Last-Update: 2016-10-11
 
 --- a/CMakeLists.txt
 +++ b/CMakeLists.txt
-@@ -106,6 +106,7 @@ set(library_sources
+@@ -88,6 +88,7 @@
    ${contrib_private_headers}
  )
  add_sources(${library_sources})
