@@ -13,11 +13,9 @@ Date:   Fri Nov 23 15:26:53 2018 +1100
     makes it more feasible to audit the set of exported symbols in automated
     ABI compatibility systems.
 
-diff --git a/CMakeLists.txt b/CMakeLists.txt
-index 1aa7839..e97d054 100644
 --- a/CMakeLists.txt
 +++ b/CMakeLists.txt
-@@ -142,6 +142,14 @@ if(WIN32)
+@@ -137,6 +137,14 @@
  	endif()
  endif()
  
@@ -31,9 +29,7 @@ index 1aa7839..e97d054 100644
 +
  # GCC or Clang or Intel Compiler specialities
  if(CMAKE_CXX_COMPILER_ID MATCHES "GNU" OR
-    CMAKE_CXX_COMPILER_ID MATCHES "Clang" OR
-diff --git a/include/yaml-cpp/dll.h b/include/yaml-cpp/dll.h
-index a32c06b..5b8c905 100644
+    (CMAKE_CXX_COMPILER_ID MATCHES "Clang" AND NOT "x${CMAKE_CXX_SIMULATE_ID}" STREQUAL "xMSVC") OR
 --- a/include/yaml-cpp/dll.h
 +++ b/include/yaml-cpp/dll.h
 @@ -27,7 +27,11 @@
